--- a/index.html
+++ b/index.html
@@ -11,5 +11,16 @@
     <link rel="stylesheet" href="/src/common/index.css" />
     <link rel="stylesheet" href="/src/common/main.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>HTML/CSS</h1>
+    <h2>HTML</h2>
+    <ul>
+      <!-- 상대경로 -->
+      <li><a href="./src/html/01-basic-structure.html">HTML 기본 구조</a></li>
+      <!-- 깃허브는 상대경로만 지원. 절대경로 사용x -->
+
+      <!-- 절대경로 -->
+      <!-- <li><a href="/src/html/01-basic-structure.html">HTML 기본 구조</a></li> -->
+    </ul>
+  </body>
 </html>
