제목과 단락

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <!-- 상대경로 -->
       <li><a href="./src/html/01-basic-structure.html">HTML 기본 구조</a></li>
       <!-- 깃허브는 상대경로만 지원. 절대경로 사용x -->
-
       <!-- 절대경로 -->
       <!-- <li><a href="/src/html/01-basic-structure.html">HTML 기본 구조</a></li> -->
+      <li><a href="/src/html/02-heading-paragraph.html">제목과 단락</a></li>
     </ul>
   </body>
 </html>
