--- a/src/html/03-image-figure.html
+++ b/src/html/03-image-figure.html
@@ -23,5 +23,35 @@
     <p>
       <img loading="lazy" width="200" height="125" src="/src/assets/korean-cuisine/sidedish10.jpg" alt="신선한 회" />
     </p>
+    <hr />
+    <figure>
+      <img width="50" height="50" src="/src/assets/svg/chitchat.svg" alt="챗봇 서비스" />
+      <figcaption>챗봇 서비스</figcaption>
+      <!-- figure태그 내부에는 figcaption태그를 사용하여 부연 설명을 할 수 있는 비디오, 텍스트, 표 등을 넣을 수 있음 -->
+    </figure>
+    <br />
+    <svg width="50" height="50" class="h-12 w-12" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+      <title>챗봇 서비스</title>
+      <!-- 타이틀태그는 대체텍스틀 대체 할수 있음 -->
+      <defs>
+        <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="a">
+          <stop stop-color="#ff0000" offset="0%"></stop>
+          <stop stop-color="#00ff00" offset="100%"></stop>
+        </linearGradient>
+        <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="b">
+          <stop stop-color="#0000ff" offset="0%"></stop>
+          <stop stop-color="#ff00ff" offset="100%"></stop>
+        </linearGradient>
+      </defs>
+      <g fill="none" fill-rule="evenodd">
+        <path
+          d="M28.872 22.096c.084.622.128 1.258.128 1.904 0 7.732-6.268 14-14 14-2.176 0-4.236-.496-6.073-1.382l-6.022 2.007c-1.564.521-3.051-.966-2.53-2.53l2.007-6.022A13.944 13.944 0 0 1 1 24c0-7.331 5.635-13.346 12.81-13.95A9.967 9.967 0 0 0 13 14c0 5.523 4.477 10 10 10a9.955 9.955 0 0 0 5.872-1.904z"
+          fill="url(#a)"
+          transform="translate(1 1)"
+        ></path>
+        <path d="M35.618 20.073l2.007 6.022c.521 1.564-.966 3.051-2.53 2.53l-6.022-2.007A13.944 13.944 0 0 1 23 28c-7.732 0-14-6.268-14-14S15.268 0 23 0s14 6.268 14 14c0 2.176-.496 4.236-1.382 6.073z" fill="url(#b)" transform="translate(1 1)"></path>
+        <path d="M18 17a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM24 17a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM30 17a2 2 0 1 0 0-4 2 2 0 0 0 0 4z" fill="#FFF"></path>
+      </g>
+    </svg>
   </body>
 </html>
