--- a/src/css/01-css-basic.html
+++ b/src/css/01-css-basic.html
@@ -9,7 +9,7 @@
     <link rel="preload" as="font" href="/font/suit/SUIT-Variable.woff2" />
     <link rel="stylesheet" href="/font/suit/SUIT-Variable.css" />
     <link rel="stylesheet" href="/src/common/index.css" />
-    <link rel="stylesheet" href="/src/css/styles/01-css-basic.css" />
+    <link rel="stylesheet" href="/src/css/styles/01-css-basic.css1" />
   </head>
   <body>
     <a href="/index.html">Index로 이동</a>
