--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <li><a href="/src/css/05-box-model.html">박스 모델</a></li>
         <li><a href="/src/css/06-list.html">CSS List</a></li>
         <li><a href="/src/css/07-nesting.html">CSS Nesting</a></li>
+        <li><a href="/src/css/08-position.html">Position</a></li>
       </ul>
     </div>
   </body>
