--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <li><a href="/src/css/06-list.html">CSS List</a></li>
         <li><a href="/src/css/07-nesting.html">CSS Nesting</a></li>
         <li><a href="/src/css/08-position.html">Position</a></li>
+        <li><a href="/src/css/10-background.html">색상 및 배경 - backgroun</a></li>
       </ul>
     </div>
   </body>
