사용자 정의 속성

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         <li><a href="/src/css/06-list.html">CSS List</a></li>
         <li><a href="/src/css/07-nesting.html">CSS Nesting</a></li>
         <li><a href="/src/css/08-position.html">Position</a></li>
-        <li><a href="/src/css/10-background.html">색상 및 배경 - backgroun</a></li>
+        <li><a href="/src/css/09-custom-properties.html">사용자 정의 속성</a></li>
+        <li><a href="/src/css/10-background.html">색상 및 배경 - background</a></li>
       </ul>
     </div>
   </body>
