--- a/index.html
+++ b/index.html
@@ -63,5 +63,12 @@
         <li><a href="/src/css/11-float.html">float 레이아웃</a></li>
       </ul>
     </div>
+    <hr />
+    <div>
+      <h2>UI</h2>
+      <ul>
+        <li><a href="/src//ui/avatars/avatars.html">아바타(과제)</a></li>
+      </ul>
+    </div>
   </body>
 </html>
