--- a/src/ui/avatars/avatars.html
+++ b/src/ui/avatars/avatars.html
@@ -15,8 +15,20 @@
   <body class="css">
     <a href="/index.html">Index로 이동</a>
     <h1>아바타 UI</h1>
+    <h2>아바타 레이아웃</h2>
+    <div class="avatar-list">
+      <div class="avatar-item"></div>
+      <div class="avatar-item"></div>
+      <div class="avatar-item"></div>
+      <div class="avatar-item"></div>
+      <div class="avatar-item"></div>
+      <div class="avatar-item"></div>
+      <div class="avatar-item"></div>
+      <div class="avatar-item"></div>
+    </div>
     <hr />
-    <h2>온라인 상태</h2>
+    <h2>아바타 컴포넌트</h2>
+    <h3>온라인 상태</h3>
     <div class="ui-component">
       <div class="avatar">
         <img src="/src/assets/face/face1.webp" width="64" height="64" alt="아바타 이름" />
@@ -24,7 +36,7 @@
       </div>
       <button type="button" class="copy-component">복사</button>
     </div>
-    <h2>오프라인 상태</h2>
+    <h3>오프라인 상태</h3>
     <div class="ui-component">
       <div class="avatar">
         <img src="/src/assets/face/face1.webp" width="64" height="64" alt="아바타 이름" />
@@ -33,7 +45,10 @@
       <button type="button" class="copy-component">복사</button>
     </div>
 
+    <hr />
     <!-- figure, figcaption 태그 사용 -->
+    <h2>아바타 컴포넌트</h2>
+    <h3>온라인 상태</h3>
     <div class="ui-component">
       <figure class="avatar">
         <img src="/src/assets/face/face1.webp" width="64" height="64" alt="아바타 이름" />
@@ -43,6 +58,8 @@
     </div>
 
     <!-- button 태그 사용 -->
+    <h2>아바타 컴포넌트</h2>
+    <h3>온라인 상태 - 버튼</h3>
     <div class="ui-component">
       <button type="button" class="avatar">
         <img src="/src/assets/face/face1.webp" width="64" height="64" alt="아바타 이름" />
