--- a/src/ui/terms/terms.html
+++ b/src/ui/terms/terms.html
@@ -15,12 +15,12 @@
     <a href="/index.html">Index로 이동</a>
     <h1>웹 관련 용어</h1>
     <h2>레이아웃</h2>
-    
+
     <hr />
     <div class="terms">
       <h2>웹 관련 용어</h2>
       <div class="term">
-        <strong>웹 표준 이란?</strong>
+        <strong>웹 표 준 이란?</strong>
         <img src="/src/assets/thumbnail/web-standards.png" alt="" />
         <p>W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하며 표준 규격은 W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하며 표준 규격은...</p>
       </div>
@@ -33,8 +33,10 @@
 
     <hr />
     <h2>컴포넌트</h2>
+
+    <h2>컴포넌트</h2>
     <!-- 컴포넌트 - 나의 작업  -->
-    <!-- <div class="terms-box">
+    <div class="terms-box">
       <h3>웹 관련 용어</h3>
       <ul>
         <li>
@@ -47,14 +49,13 @@
           </div>
         </li>
       </ul>
-    </div> -->
+    </div>
 
     <!-- 용어 제목(강조) + 단락 유형 -->
     <div class="term">
       <strong>웹 표준 이란?</strong>
       <img src="/src/assets/thumbnail/web-standards.png" width="60" height="68" />
       <p>W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하며 표준 규격은...</p>
-      
     </div>
     <div class="ui-component">
       <div class="term">
@@ -63,20 +64,20 @@
         <p>W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하며 표준 규격은 W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하며 표준 규격은...</p>
       </div>
       <button type="button" class="copy-component">복사</button>
-
+    </div>
     <!-- 용어를 캡션 정보로 제공하는 유형 -->
-    <!-- <figure class="term">
+    <figure class="term">
       <img src="/src/assets/thumbnail/web-standards.png" alt="" />
       <figcaption>
         <strong>웹 표준 이란?</strong>
         <p>W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하며 표준 규격은...</p>
       </figcaption>
-    </figure> -->
+    </figure>
     <!-- 정의형 목록 유형 -->
-    <!-- <div class="term">
+    <div class="term">
       <dt>웹 표준 이란?</dt>
       <dd><img src="/src/assets/thumbnail/web-standards.png" alt="" /></dd>
       <dd>W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하며 표준 규격은...</dd>
-    </div> -->
+    </div>
   </body>
 </html>
