--- a/src/css/13-logical-properties.html
+++ b/src/css/13-logical-properties.html
@@ -11,28 +11,18 @@
     <link rel="stylesheet" href="/src/common/index.css" />
     <link rel="stylesheet" href="/src/css/styles/13-logical-properties.css" />
   </head>
-  <body class="css">
+  <body class="spacing-20">
     <a href="/index.html">Index로 이동</a>
     <h1>논리속성과 논리값 - logical-properties</h1>
 
-    <div class="like">
-      멋쟁이 사자처럼 프론트엔드 부트캠프 16기 화이팅!
-    </div>
+    <div class="like">멋쟁이 사자처럼 프론트엔드 부트캠프 16기 화이팅!</div>
     <hr />
-    <div class="lion">
-      멋쟁이 사자처럼 프론트엔드 부트캠프 16기 화이팅!
-    </div>
+    <div class="lion">멋쟁이 사자처럼 프론트엔드 부트캠프 16기 화이팅!</div>
     <hr />
-    <div class="bootcamp">
-      멋쟁이 사자처럼 <strong>프론트엔드</strong> 부트캠프 16기 화이팅!
-    </div>
-    <hr />  
-    <div class="frontend">
-      멋쟁이 사자처럼 프론트엔드 <strong>부트캠프</strong> 16기 화이팅!
-    </div>
+    <div class="bootcamp">멋쟁이 사자처럼 <strong>프론트엔드</strong> 부트캠프 16기 화이팅!</div>
     <hr />
-    <div class="euid">
-      멋쟁이 사자처럼 프론트엔드 부트캠프 16기 화이팅!
-    </div>
+    <div class="frontend">멋쟁이 사자처럼 프론트엔드 <strong>부트캠프</strong> 16기 화이팅!</div>
+    <hr />
+    <div class="euid">멋쟁이 사자처럼 프론트엔드 부트캠프 16기 화이팅!</div>
   </body>
 </html>
