--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>멋사 프론트엔드 부트캠프 16기 - 슬비쌤</title>
-    <link rel="shortcut icon" href="/favicon/likelion.ico" type="image/x-icon" /> <!-- 옛날방식 -->
-    <link rel="icon" href="/favicon/likelion.svg" /> <!-- 모던방식 -->
+    <link rel="shortcut icon" href="/favicon/likelion.ico" type="image/x-icon" />
+    <!-- 옛날방식 -->
+    <link rel="icon" href="/favicon/likelion.svg" />
+    <!-- 모던방식 -->
     <link rel="preload" as="font" href="/font/suit/SUIT-Variable.woff2" />
     <link rel="stylesheet" href="/font/suit/SUIT-Variable.css" />
     <link rel="stylesheet" href="/src/common/index.css" />
@@ -29,21 +31,21 @@
         <li><a href="/src/html/07-phrasing-element.html">프레이징 요소</a></li>
         <li><a href="/src/html/08-blockquote-br.html">인용문과 줄바꿈</a></li>
         <li><a href="/src/html/09-table.html">테이블 관련 요소</a></li>
-        <li><a href="/src/html/10-container-element.html">컨테이너 요소</a></li></a></li>
-        <li><a href="/src/html/11-section-main.html">섹션과 메인 요소</a></li></a></li>
-        <li><a href="/src/html/12-text-level-element.html">텍스트 레벨 요소</a></li></a></li>
-        <li><a href="/src/html/13-address.html">address 요소</a></li></a></li>
-        <li><a href="/src/html/14-picture-source.html">picture와 source 요소</a></li></a></li>
-        <li><a href="/src/html/15-video-track.html">video 관련 요소</a></li></a></li>
-        <li><a href="/src/html/16-iframe-object.html">iframe, object 요소</a></li></a></li>
-        <li><a href="/src/html/17-map-area.html">map과 area 요소</a></li></a></li>
-        <li><a href="/src/html/18-form-input.html">폼 (input) 요소</a></li></a></li>
-        <li><a href="/src/html/19-form-button.html">폼 (button) 요소</a></li></a></li>
-        <li><a href="/src/html/20-form-select-textarea.html">폼 (select, textarea) 요소</a></li></a></li>
-        <li><a href="/src/html/21-dialog-popover.html">dialog 요소</a></li></a></li>
-        <li><a href="/src/html/22-details-summary.html">details, summary 요소</a></li></a></li>
-        <li><a href="/src/html/23-script.html">script 요소</a></li></a></li>
-        <li><a href="/src/html/24-interactive-attribute.html">유저 인터렉션 속성</a></li></a></li>
+        <li><a href="/src/html/10-container-element.html">컨테이너 요소</a></li>
+        <li><a href="/src/html/11-section-main.html">섹션과 메인 요소</a></li>
+        <li><a href="/src/html/12-text-level-element.html">텍스트 레벨 요소</a></li>
+        <li><a href="/src/html/13-address.html">address 요소</a></li>
+        <li><a href="/src/html/14-picture-source.html">picture와 source 요소</a></li>
+        <li><a href="/src/html/15-video-track.html">video 관련 요소</a></li>
+        <li><a href="/src/html/16-iframe-object.html">iframe, object 요소</a></li>
+        <li><a href="/src/html/17-map-area.html">map과 area 요소</a></li>
+        <li><a href="/src/html/18-form-input.html">폼 (input) 요소</a></li>
+        <li><a href="/src/html/19-form-button.html">폼 (button) 요소</a></li>
+        <li><a href="/src/html/20-form-select-textarea.html">폼 (select, textarea) 요소</a></li>
+        <li><a href="/src/html/21-dialog-popover.html">dialog 요소</a></li>
+        <li><a href="/src/html/22-details-summary.html">details, summary 요소</a></li>
+        <li><a href="/src/html/23-script.html">script 요소</a></li>
+        <li><a href="/src/html/24-interactive-attribute.html">유저 인터렉션 속성</a></li>
       </ul>
     </div>
     <hr />
