유틸리티 바 (aria-hidden) - 주석수정

--- a/src/ui/utility-bar/utility-bar.html
+++ b/src/ui/utility-bar/utility-bar.html
@@ -37,4 +37,5 @@
 
 <!-- 
   - 최근 가상요소를 사용하기 보기보다는 aria-hidden으로 많이 작업함.
-    ㄴ 스크리리더기에서 가상요소를 읽어주는 경우가 있음 -->
+    ㄴ 왜냐?! 스크리리더기에서 가상요소를 읽어주는 경우가 있음
+-->
