--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <li><a href="/src/ui/avatars/avatars.html">아바타(과제)</a></li>
         <li><a href="/src/ui/terms/terms.html">웹 관련 용어</a></li>
         <li><a href="/src/ui/utility-bar/utility-bar.html">유틸리티 바(utility-bar)</a></li>
-        <li><a href="/src/ui/16th-members/16th-members.html">유틸리티 바(utility-bar)</a></li>
+        <li><a href="/src/ui/16th-members/16th-members.html">멋사 부트캠프 16기 멤버</a></li>
       </ul>
     </div>
   </body>
