--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <li><a href="/src/css/11-float.html">float 레이아웃</a></li>
         <li><a href="/src/css/12-media-query.html">css 미디어 쿼리 - media query</a></li>
         <li><a href="/src/css/13-logical-properties.html">논리속성과 논리값 - logical-properties</a></li>
+        <li><a href="/src/css/14-flexbox.html">Flex 레이아웃</a></li>
       </ul>
     </div>
     <hr />
